# test

./: .env.sample  categories.json  category.json  groups.json  products.json  pyproject.toml  requirements.txt
blog/: admin.py  models.py  urls.py  views.py
blog/migrations/: 0001_initial.py  0002_alter_blog_image_alter_blog_published_and_more.py  0003_alter_blog_description.py
blog/templates/blog/: base.html  blog_confirm_delete.html  blog_detail.html  blog_form.html  blog_list.html
config/: settings.py  urls.py
main/: admin.py  forms.py  models.py  services.py  urls.py  views.py
main/migrations/: 0001_initial.py  0002_product_manufactured_at.py  0003_remove_product_manufactured_at.py  0004_alter_category_description_alter_product_description_and_more.py  0005_alter_product_image.py  0006_alter_category_options_alter_product_options.py  0007_alter_category_options_alter_product_options.py  0008_alter_category_name_alter_product_name.py  0009_alter_product_options.py  0010_alter_product_image.py  0011_alter_product_image.py  0012_blogpost.py  0013_delete_blogpost_product_published_product_slug_and_more.py  0014_alter_product_published.py  0015_alter_product_published.py  0016_version.py  0017_alter_version_version_name_and_more.py  0018_alter_version_product.py  0019_delete_version.py  0020_product_owner.py  0021_alter_product_options.py
users/: admin.py  forms.py  models.py  urls.py  views.py
users/migrations/: 0001_initial.py  0002_user_token.py
version/: forms.py  models.py  urls.py  views.py
version/migrations/: 0001_initial.py
(+18 files in other folders)
