[tool.poetry]
name = "django-20-1"
version = "0.1.0"
description = ""
authors = ["Your Name <you@example.com>"]
readme = "README.md"
packages = [{include = "django_20"}]

[tool.poetry.dependencies]
python = "^3.11"
django = "^5.0.3"
psycopg2 = "^2.9.9"
pillow = "^10.3.0"
ipython = "^8.23.0"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
